card y cantidad de gente afectada por ala disfemia

--- a/footer.html
+++ b/footer.html
@@ -41,9 +41,7 @@
                     <p>
                         <a class="text-white text-decoration-none" href="/bootstrap/src/utils/pagina_desarrollo.php">Disfemia</a>
                     </p>
-                    <p>
-                        <a class="text-white text-decoration-none" href="http://www.userena.cl/">Universidad de La Serena</a>
-                    </p>
+                    
                     <!-- <p>
                         <a class="text-white text-decoration-none" href="/bootstrap/src/utils/pagina_desarrollo.php">Postular sindicato</a>
                     </p> -->
@@ -53,9 +51,9 @@
                     <h6 class="text-uppercase mb-4 font-weight-bold text-white">
                         Enlaces
                     </h6>
-                    <!-- <p>
-                        <a class="text-white text-decoration-none " href="/bootstrap/src/utils/pagina_desarrollo.php">Sindicatos afiliados</a>
-                    </p> -->
+                    <p>
+                        <a class="text-white text-decoration-none" href="http://www.userena.cl/">Universidad de La Serena</a>
+                    </p>
                     <!-- <p>
                         <a class="text-white text-decoration-none" href="/bootstrap/src/utils/pagina_desarrollo.php">Documentos</a>
                     </p> -->
@@ -63,7 +61,7 @@
                         <a class="text-white text-decoration-none" href="/bootstrap/src/utils/pagina_desarrollo.php">Suscribirse</a>
                     </p> -->
                     <p>
-                        <a class="text-white text-decoration-none" href="/bootstrap/src/utils/pagina_desarrollo.php">Escríbenos</a>
+                        <a class="text-white text-decoration-none" href="http://www.worldstutteringnetwork.net/">World Stuttering Network</a>
                     </p>
                 </div>
                 <hr class="w-100 clearfix d-md-none" />
