--- a/navbar.html
+++ b/navbar.html
@@ -43,12 +43,12 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item text-white" href="#">EQUIPO</a></li>
-                                    <li><a class="dropdown-item text-white" href="#">VISION</a></li>          
+                                    <li><a class="dropdown-item text-white" href="#">VISIÓN</a></li>          
                                 </ul>
                             </li>
                             <li class="nav-item dropdown ">
                                 <a class="nav-link dropdown-toggle text-center text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    DISTO
+                                    SOFTWARE
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item text-white" href="#">ORIGEN</a></li>
@@ -65,8 +65,6 @@
             </nav>
         </div>
     </div>
-    <!-- JS SCRIPTS -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
     
 </body>
 </html>
