--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p class="text-white fs-4">
                         Personas con disfemia en el mundo aproximadamente
                     </p>
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center g-0 m-0 p-0">
                         <p class="text-white fs-4 w-75">
                             DISTO es una herramienta que busca ayudar a las personas con disfemia a mejorar su comunicación y calidad de vida.
                         </p>
