--- a/footer.html
+++ b/footer.html
@@ -67,7 +67,7 @@
                 <hr class="w-100 clearfix d-md-none" />
                 <div class="col">
                     <h6 class="text-uppercase mb-4 font-weight-bold text-white">Contacto</h6>
-                    <p class="text-white"><i class="fas fa-home mr-3"></i> La Serena, Comquimbo, CL</p>
+                    <p class="text-white"><i class="fas fa-home mr-3"></i> La Serena, Coquimbo, CL</p>
                     <p class="text-white"><i class="fas fa-envelope mr-3"></i> distoapp@gmail.com</p>
                     <!-- <p class="text-white"><i class="fas fa-phone mr-3"></i> +569 12345678</p>
                     <p class="text-white"><i class="fas fa-print mr-3"></i> +562 12345678</p> -->
