--- a/navbar.html
+++ b/navbar.html
@@ -22,7 +22,7 @@
                     <div class="offcanvas offcanvas-start w-50" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                         <div class="offcanvas-header d-block bg-navbar">
                             <div class="row g-0">
-                                <div class="col-sm-12">
+                                <div class="col-sm-12 d-md-none">
                                     <div class="row justify-content-end align-items-center g-2 text-white">
                                         <div class="col"></div>
                                         <div class="col"></div>
@@ -32,7 +32,7 @@
                                     </div>
                                     
                                 </div>
-                                <div class="col-sm-12">
+                                <div class="col-sm-12 d-md-none">
                                     <a href="/">
                                         <img class="logo-navbar-offcanvas " src="/assets/disto-icon.png" alt="">
                                     </a>
