--- a/navbar.html
+++ b/navbar.html
@@ -15,8 +15,8 @@
         <div class="row justify-content-center align-items-center g-0 p-0 m-0">
             <nav class="navbar navbar-dark navbar-expand-md justify-content-around sticky-top text-center bg-navbar">
                 <div class="container-fluid p-0 m-0">
-                    <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-                    <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler ms-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon "></span>
                     </button>
                     
                     <div class="offcanvas offcanvas-start w-50" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
