--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/carousel.css">
 
     <script> 
         $(function(){
             $("#navbar").load("navbar.html"); 
         });
     </script> 
-    <script> 
-        $(function(){
-        $("#carousel").load("carousel.html"); 
-        });
-    </script>
    
     <title>DISTO</title>
     <!-- set size for the icon -->
@@ -42,7 +38,54 @@
             </div>
         </div>
         <div id="navbar" class="sticky-top"></div>
-        <div id="carousel"></div>
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="6000">
+                            <img src="assets/disto.png" class="d-block w-100 img-carousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                            <!-- <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="6000">
+                            <img src="assets/disto.png" class="d-block w-100 img-carousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <!-- <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="6000">
+                            <img src="assets/disto.png" class="d-block w-100 img-carousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <!-- <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+
+            </div>
+           
+        </div>
+
+        
+        <!-- <div id="carousel"></div> -->
         <div class="row justify-content-center g-0 align-items-center" >
             <div class="col-md-6 col-sm-12 mt-3">
                 <div class="row justify-content-center p-0 g-0 m-0">
